# rust-cdk-user-service

./: README.md  cargo-build.sh  cdk.json  cf-user.code-workspace  package-lock.json  package.json
lib/: app-stack.ts
src/cf-user_core/: Cargo.toml
src/cf-user_core/src/: aws_config_loader.rs  dynamo.rs  error.rs  ext.rs  fn_handler.rs  lib.rs
src/cf-user_core/src/args/: create_user_args.rs  mod.rs  update_user_args.rs
src/cf-user_core/src/models/: cache_credentials.rs  handler_response.rs  mod.rs  paginated_result.rs  paginated_users.rs  permissions.rs  user.rs
src/cf-user_create-user/: Cargo.toml
src/cf-user_create-user/src/: main.rs
src/cf-user_delete-user/: Cargo.toml
src/cf-user_delete-user/src/: main.rs
src/cf-user_get-user/: Cargo.toml
src/cf-user_get-user/src/: main.rs
src/cf-user_integration-tests/: Cargo.toml
src/cf-user_integration-tests/src/: lib.rs
src/cf-user_list-users/: Cargo.toml
src/cf-user_list-users/src/: main.rs
src/cf-user_update-user/: Cargo.toml
src/cf-user_update-user/src/: main.rs
tests/: get_user_tests.rs
