[package]
name = "cf-user_core"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.56.0"
aws-sdk-dynamodb = "0.33.0"
aws-sdk-sso = "0.33.0"
chrono = "0.4.25"
dirs = "5.0.1"
hex = "0.4.3"
lambda_http = "0.8.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
ulid = "1.0.0"
