[package]
name = "cf-user_get-user"
version = "0.1.0"
edition = "2021"

# Use cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-sdk-dynamodb = "0.33.0"
aws-config = "0.56.0"
cf-user_core = { path = "../cf-user_core" }
simple-error = "0.3.0"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
lambda_http = "0.8.1"
tokio = { version = "1.29.1", features = ["macros"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["ansi", "fmt"] }
ulid = "1.0.0"